# data-process-demo

./: Cargo.toml  README.md
src/: main.rs
src/entity/: datetime_formatter.rs  helpers.rs  mod.rs  schema.rs
src/helpers/: mod.rs
src/process/: mod.rs
