[package]
name = "linc-interview-testing"
version = "0.1.0"
authors = ["Wendell Liu <cuk.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.117", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"]} 
itertools = "0.9.0"
